@@ -119,6 +119,7 @@ typedef struct
 
 } DAEMONCONFIG;
 
+extern int daemon_our_pidfile;
 
 #define AUTHOR_NAME "John Dickinson"
 #define COPYRIGHT_STR "Copyright (C) 2008 2009 Nominet UK"
