@@ -11,6 +11,7 @@ Bugfixes:
   authoritative RRsets become glue [OPENDNSSEC-282].
 * OPENDNSSEC-290: Signer Engine: Fix false conflict when changing CNAME into 
   other RRtype.
+* OPENDNSSEC-298: Only unlink existing pidfile on exit if we wrote it.
 
 
 OpenDNSSEC 1.4.0a2 - 2012-05-24
